--- a/styles/scss/vtex.flex-layout.scss
+++ b/styles/scss/vtex.flex-layout.scss
@@ -1370,6 +1370,10 @@
   overflow: hidden;
   text-overflow: ellipsis;
   font-family: OpenSans;
+
+  @media screen and (max-width: 767px){
+    font-size: 12px;
+  }
 }
 .flexCol--card-payment {
   margin: 0 10px;
@@ -1403,6 +1407,11 @@
     font-size: 24px;
     font-weight: bold;
     color: #525252;
+
+    @media screen and (max-width: 767px) {
+      font-size: 16px;
+      color: #ED1D25;
+    }
   }
 }
 
